# prompt-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.nginx.yml  docker-compose.postgres.yml  docker-compose.yml  progress.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: deployment.md  nginx-ssl.md
nginx/: nginx.conf
scripts/: test-container.sh
src/prompt_manager/: __init__.py
src/prompt_manager/api/: __init__.py  auth.py  deps.py  main.py
src/prompt_manager/api/routes/: __init__.py  prompts.py  search.py  stats.py
src/prompt_manager/cli/: __init__.py  client.py  main.py  output.py
src/prompt_manager/cli/commands/: alias.py  config.py  prompt.py  search.py
src/prompt_manager/core/: __init__.py  config.py  database.py  models.py  repository.py  schemas.py  service.py  templates.py
tests/: conftest.py
tests/test_api/: test_prompts.py
tests/test_cli/: test_output.py
tests/test_core/: test_repository.py  test_templates.py
